--- a/css/styles.css
+++ b/css/styles.css
@@ -79,9 +79,7 @@ body {
   background-color:#414141;
 }
 
-#footer a {
-  color:#efefef;
-}
+
 
 header {
   background: #333;
@@ -97,6 +95,14 @@ header .dropdown-menu {
 h1 {
   font-size:50px;
 }
+
+.bg-4 h1 {
+  font-size:50px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
+
 
 h1 .gray {
   color:gray;
@@ -252,9 +258,20 @@ section {
 }
 
 .bg-4 {
-	padding-top:30px;
     background-color:#e6e6e6;
+    padding-top: 30px;
+    padding-bottom: 50px;
 }
+
+.bg-5 {
+    background-color:white;
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+
+
+
 
 .panel .img-responsive {
 	min-height:270px;
@@ -262,12 +279,62 @@ section {
 }
 
 
-.col-sm-12.figure {
-  padding: 0px;
+.footer-caption h1 {
+  color: white;
+  bottom: 350px;
+  position: relative;
+  margin-left: 125px;
+}
+
+.footer-caption p {
+  font-size: 20px;
+  bottom: 350px;
+  position: relative;
+  color: white;
+  margin-left: 125px;
+
+}
+
+#copyright p {
+  font-size: 15px;
+  color: black;
+  position: relative;
+  text-align: center;
+  bottom: 250px;
+}
+
+.btn a {
+  margin: 1px;
+  bottom: 350px;
+  position: relative;
+  background-color: transparent;
+  padding:5px;
+  border: 2px solid #666;
+  border-radius: 5px;
+  text-decoration:none;
+  width: 100px;
+  font-size: 20px;
+  color: white;
+}
+
+.row .btn {
+  margin-left: 100px;
+  margin-right: 1px;
+}
+
+
+ h3 {
+  color: #CA4C4D;
+  margin-top: 0;
+  font-size: 30px;
+}
+
+.col-sm-6 p {
+  margin-top: 40px;
+  font-size: 20px;
 }
 
 
 
-.container-fluid.backgroundblack {
-  background-image: url("img/footer.jpg";
-}
+
+
