--- a/css/styles.css
+++ b/css/styles.css
@@ -270,9 +270,6 @@ section {
 }
 
 
-
-
-
 .panel .img-responsive {
 	min-height:270px;
     max-height:270px;
@@ -281,31 +278,39 @@ section {
 
 .footer-caption h1 {
   color: white;
-  bottom: 350px;
+  bottom: 0px;
   position: relative;
   margin-left: 125px;
 }
 
 .footer-caption p {
   font-size: 20px;
-  bottom: 350px;
+  bottom: 0px;
   position: relative;
   color: white;
   margin-left: 125px;
 
 }
 
+#findme button {
+  width:150px;
+  height:40px;
+}
+
+#moreheadroom {
+  margin-top:160px;
+}
+
 #copyright p {
   font-size: 15px;
   color: black;
-  position: relative;
   text-align: center;
-  bottom: 250px;
+
 }
 
 .btn a {
   margin: 1px;
-  bottom: 350px;
+  bottom: 50px;
   position: relative;
   background-color: transparent;
   padding:5px;
@@ -320,6 +325,7 @@ section {
 .row .btn {
   margin-left: 100px;
   margin-right: 1px;
+  bottom: 50;
 }
 
 
@@ -331,10 +337,23 @@ section {
 
 .col-sm-6 p {
   margin-top: 40px;
+  padding-left: 100px;
   font-size: 20px;
 }
 
+.col-sm-12 {
+  margin-top: 40px;
+  font-size: 20px;
+  bottom: 5px;
+}
 
+.container-fluid {
+  background-image: url("../img/footer.jpg");
+  height: 400px;
+}
 
+.col-sm-10 {
+  margin-left: 100px;
+}
 
 
