--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ header .dropdown-menu {
 
 h1 {
   font-size:50px;
+  text-align: center;
 }
 
 .bg-4 h1 {
@@ -275,12 +276,16 @@ section {
     max-height:270px;
 }
 
+.footer-caption {
+  margin-left: 12%;
+}
+
 
 .footer-caption h1 {
   color: white;
   bottom: 0px;
   position: relative;
-  margin-left: 125px;
+
 }
 
 .footer-caption p {
@@ -288,8 +293,14 @@ section {
   bottom: 0px;
   position: relative;
   color: white;
-  margin-left: 125px;
 
+
+}
+
+#findme {
+  padding-left: 12%;
+  text-align: left;
+  bottom: 5px;
 }
 
 #findme button {
@@ -356,4 +367,50 @@ section {
   margin-left: 100px;
 }
 
+#title {
+  font-size: 40px;
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bolder;
+}
 
+.information {
+  width: 75%;
+  margin: 0 auto;
+}
+
+#skills {
+  width:35%;
+
+}
+
+.section-heading{
+  text-align: center;
+}
+
+.highlight p {
+  text-align: center;
+  font-size: 1000px;
+}
+
+#black hr {
+  color: black;
+}
+
+.description {
+  text-align: center;
+  font-size: 30px;
+  text-decoration: bold;
+}
+
+#icon {
+  width: 60px;
+  height: 60px;
+  display: inline;
+}
+
+#contact {
+  font-size: 25px;
+  color: white;
+
+}
